# researcher_agent

./: pyproject.toml
researcher_agent/: run.py  schemas.py  text_processing.py
researcher_agent/configs/: deployment.json  llm_configs.json
