[tool.poetry]
name = "researcher_agent"
version = "0.1.0"
description = "A researcher agent module for collaborative research"
authors = ["Gowtham Satti <sattigowtham1999@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4,<9"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 